Fixed blurriness

--- a/Provinces/style.css
+++ b/Provinces/style.css
@@ -65,8 +65,3 @@ img {
 .action:hover {
 	cursor: pointer;
 }
-
-#gameCanvas {
-	width: 100%;
-	height: 100%;
-}
